# chaos_db

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  Makefile  README.md  Untitled.ipynb  Vagrantfile  collect.py  dump_mem.sh  pretty_maps.py  results_1000_heap.csv  results_1000_stack.csv  test.py  vm_setup.sh
ChaosDB/: CMakeLists.txt  ChaosDB.cpp  ChaosDB.h
ChaosDB/include/: args.hpp  flipper.hpp  memory.hpp  parser.hpp  pmparser.h  process.hpp
ChaosDB/src/: args.cpp  flipper.cpp  injector.cpp  memory.cpp  parser.cpp  pmparser.c  process.cpp
Counter/: CMakeLists.txt
Counter/src/: main.cpp
answers/sqlite/: q1.out  q3.out
databases/ahead/: init.sh  install.sh
databases/ahead/answers/: ssb11.out  ssb41.out
databases/duckdb/: benchmark.sh  init.sh  install.sh  load.sql  schema.sql
databases/duckdb/answers/: q1.out  q3.out
databases/duckdb/queries/: 1.sql  3.sql
databases/monetdb/: generate_load_file.py  init.sh  install.sh  load.sql
databases/monetdb/answers/: q1.out
databases/postgres/: constraints.sql  init.sh  install.sh  load.sql  schema.sql
databases/sqlite/: init.sh  install.sh  load.sql  schema.sql  update.sql
databases/sqlite/queries/: 1.sql  3.sql
databases/tpch/: dbgen.sh
injector/: CMakeLists.txt
injector/include/: args.hpp  database.hpp  fault.hpp  flipper.hpp  injector.hpp  memory.hpp  process.hpp  server.hpp  sticker.hpp  time.hpp
injector/src/: args.cpp  database.cpp  fault.cpp  flipper.cpp  injector.cpp  memory.cpp  pmparser.c  process.cpp  server.cpp  sticker.cpp  time.cpp
jupyter/: duckdb_tpch1_flip_heap_plots.ipynb  duckdb_tpch1_flip_stack_plots.ipynb  jupyter_notebook_config.py  monetdb_tpch1_flip_heap_plots.ipynb  plots.ipynb  sqlite_tpch1_flip_heap_plots.ipynb  sqlite_tpch1_flip_stack_plots.ipynb
orchestrator/: args.py  cleanup.py  cluster.py  collect.py  db.py  fault_type.py  generate_sql_file.py  injector.py  orchestrator.py  queries.py  result.py  thread_util.py  util.py
orchestrator/injector/: __init__.py  client.py  injector.py
orchestrator/monitor/: __init__.py  ahead.py  duckdb.py  monetdb.py  monitor.py  sqlite.py
orchestrator/runner/: __init__.py  ahead.py  duckdb.py  monetdb.py  runner.py  sqlite.py
queries/sqlite/: 1.sql  10.sql  11.sql  12.sql  13.sql  14.sql  15.sql  16.sql  17.sql  18.sql  19.sql  2.sql  20.sql  21.sql  22.sql  3.sql  4.sql  5.sql  6.sql  7.sql  8.sql  9.sql
